cmake_minimum_required(VERSION 3.10)
set (CMAKE_CXX_STANDARD 17)
project(bomberman)
if (WIN32)
	set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/Library/Windows/")
    find_package(Irrlicht REQUIRED)
endif()
if (UNIX)
	set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/Library/Linux/")
    find_package(Irrlicht REQUIRED)
    find_package(SFML 2.5 COMPONENTS system audio REQUIRED)
endif()
file(GLOB projet_HPP
    "./Includes/*.hpp"
)
file(GLOB projet_CPP
    "./Sources/*.cpp"
    "./Sources/Engine/*.cpp"
    "./Sources/Core/*.cpp"
    "./Sources/Bomberman/*.cpp"
)
include_directories(Irrlicht_INCLUDE_DIRS)
set(LIBS ${LIBS} ${Irrlicht_LIBRARIES})
include_directories(SYSTEM Library/Includes)
include_directories(Includes)
if(WIN32)
    set(Irrlicht_DIR "./Library/Window")
    link_directories(./Library/Windows)
    set(CMAKE_CXX_FLAGS "/W4 /permissive")
    file(COPY ./Library/Windows/Irrlicht.dll DESTINATION .)
    file(COPY ./Library/Windows/sfml-audio-d-2.dll DESTINATION .)
    file(COPY ./Library/Windows/sfml-system-d-2.dll DESTINATION .)
endif()
if (UNIX)
    set(CMAKE_CXX_FLAGS "-W -Wall -Wextra -lIrrlicht -lGL -lXxf86vm -lXext -lX11 -Wfatal-errors -g3")
endif()
add_executable(bomberman ${projet_CPP} ${projet_HPP})
target_link_libraries(bomberman ${LIBS})
if (WIN32)
    target_link_libraries(bomberman sfml-system-d sfml-audio-d)
endif()
if (UNIX)
    target_link_libraries(bomberman sfml-system sfml-audio)
endif()
file(COPY ./Assets/ DESTINATION Assets/)
